AKS-All-In-One/ingress-inbound.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox-ingress
  namespace: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: netbox.besdima.dev
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: netbox-app
                port:
                  number: 8080
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - netbox.besdima.dev
      secretName: ingress-tls-csi
