AKS-All-In-One/netbox-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: netbox-networkpolicy-ingrees
  namespace: netbox
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {ingress}
      podSelector: 
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - namespaceSelector: {redis}
      podSelector:
        matchLabels:
          app: netbox-redis
    - namespaceSelector: {psql}
      podSelector:
        matchLabels:
          app: netbox-psql
    - namespaceSelector: {ingress}
      podSelector: 
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  # - to: # To main Subnets
  #   - ipBlock:
  #       cidr: 10.0.2.0/24
  #   - ipBlock:
  #       cidr: 10.1.2.0/24
  # - to: # To DNS Server
  #   - ipBlock:
  #       cidr: 10.0.4.0/24
  #   ports:
  #   - protocol: UDP
  #     port:  53
  #   - protocol: TCP
  #     port:  53
