AKS-All-In-One/psql-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: psql-networkpolicy-ingrees
  namespace: psql
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {netbox}
      podSelector: 
        matchLabels:
          app: netbox-app
  egress:
  - to:
    - namespaceSelector: {netbox}
      podSelector:
        matchLabels:
          app: netbox-app
